<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PrismaActivity"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_Panjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_Panjang"
        android:paddingBottom="5dp"
        />

    <EditText
        android:id="@+id/et_Panjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_panjang_bangun"
        android:paddingBottom="20dp"
        android:inputType="number" />
    <TextView
        android:id="@+id/tv_Lebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_Lebar"
        android:paddingBottom="5dp"/>
    <EditText
        android:id="@+id/et_Lebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_lebar_bangun"
        android:paddingBottom="20dp"
        android:inputType="number"/>
    <TextView
        android:id="@+id/tv_Tinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_Tinggi"
        android:paddingBottom="5dp"/>
    <EditText
        android:id="@+id/et_Tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_tinggi_bangun"
        android:paddingBottom="20dp"
        android:inputType="number"/>
    <TextView
        android:id="@+id/tv_Hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_Hasil"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btn_Hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Hitung"
        android:textSize="50sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_bg_hitung"
        />




</androidx.appcompat.widget.LinearLayoutCompat>
