<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">
    <TextView
        android:id="@+id/tv_Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_menu"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_Prisma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_prisma"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btn_Lingkaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_Lingkaran"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>